tests/ui/const_prop/ice-type-mismatch-when-copying-112824.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/ice-type-mismatch-when-copying-112824.rs:5:21
   |
LL | pub struct Opcode2(&'a S);
   |                     ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | pub struct Opcode2<'a>(&'a S);
   |                   ++++

error[E0412]: cannot find type `S` in this scope
  --> $DIR/ice-type-mismatch-when-copying-112824.rs:5:24
   |
LL | pub struct Opcode2(&'a S);
   |                        ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | pub struct Opcode2<S>(&'a S);
   |                   +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0412.
For more information about an error, try `rustc --explain E0261`.
